2008-08-21  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-ontology.c:
	(ontology_hash_lookup_by_str), (ontology_hash_lookup_by_id): Check
	the string is != NULL before using it in g_hash_table_lookup()
	which uses strcmp for string comparisons.

2008-08-21  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c: Removed
	is_text_file() which is no longer used.

	* src/libtracker-common/tracker-parser.[ch]: Fixed the formatting
	and use gchar instead of char in new code. Removed unnecessary
	spacing and a LOT of trailing whitespace. Fixed the header file
	too.
	
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/modules/Makefile.am:
	* src/trackerd/Makefile.am:
	* tests/libtracker-common/Makefile.am:
	* tests/libtracker-db/Makefile.am: Removed references to
	libxdgmime.la which was breaking the build.

2008-08-20  Jamie McCracken <jamiemcc at gnome org>

	* Added new API for tracker-parser so that it will be compatible
	with sqlite FTS3.

2008-08-20  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-file-utils.c
	(tracker_file_get_mime_type): Replace mimetype checking with GIO.
	* configure.in:
	* src/Makefile.am:
	* src/xdgmime/*: Nuked the local xdgmime copy.

2008-08-20  Martyn Russell  <martyn@imendio.com>

	* src/tracker-applet/tracker-applet.c: 
	* src/tracker-extract/tracker-extract-tiff.c:
	* src/tracker-indexer/tracker-indexer-db.c:
	* src/trackerd/tracker-xesam.c:
	* tests/libtracker-common/tracker-type-utils-test.c:
	* utils/qdbm/search-word.c: More uninitialised variable crapness
	fixed to make it the all new hotness.

2008-08-20  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-type-utils.[ch]: Renamed
	tracker_boolean_as_text_to_number() to
	tracker_string_boolean_to_string_gint(). 
	
	* src/libtracker-db/tracker-db-manager.c: Make use of
	tracker_string_boolean_to_string_gint() instead of using code